--- a/index.html
+++ b/index.html
@@ -16,30 +16,23 @@
 
     <!-- ####################### Heading ####################### -->
 	<a name="top"></a>
-	<h1 style="text-align:center; width:1200px" id="header" class="header">&nbsp; UNSW Computational Cognitive Science</h1>
-
+	<h1 style="text-align:center; width:1200px" id="header" class="header">&nbsp; Cognitive Science in Orienteering</h1>
 
     <!-- ####################### Start page ####################### -->
 
 	<div class="start" style="width: 1000px">
 		<!-- Text box for the splash page -->
 		<div class="start" style="text-align:left; border:0px solid; padding:10px;  width:800px; float:right; font-size:90%">
-			<p>Thanks for accepting the HIT. <b>"The Spheres of Sodor"</b> is a short psychological study investigating how people make decisions. It involves
-                the following steps:</p>
+<p><b><br>	"Reading Sprint Maps"</b> is a short psychological study investigating how people read sprint orienteering maps. It involves the following steps:</p>
 			<ol>
-				<li> We ask for demographic information (not connected to your Amazon ID)<br></li>
-				<li> Because this is a University research project, we ask for your informed consent. (The format of the consent form is a  standard university document, so it sometimes looks a little weird on MTurk)<br></li>
-				<li> The study then explains how to do the task in detail. You will need to pass a short test to
-                     check that you understand how the study works.<br></li>
-				<li> Next comes the experiment itself.<br></li>
-				<li> At the end, we'll give you the completion code you need to get paid for the HIT.</li>
+	<li> We ask for your consent. <br></li>
+	<li> We ask for demographic information.<br></li>
+	<li> If you are new to orienteering we give you some information on reading maps<br></li>
+	<li> The study then explains how to do the task in detail. You will need to pass a short test to check that you understand how the study works.<br></li>
+	<li> Next comes the experiment itself.<br></li>
+	<li> At the end, we'll show you a summary of your results and give you the option to identify yourself so we can email you a summary</li>
 			</ol>
-			<p>
-                The total time taken should be about 5 minutes. Please <u>don't</u> use the "back" button on
-                your browser or close the window until you reach the end and receive your completion code.
-                This is very likely to break the experiment and may make it difficult for you to get paid.
-                However, if something does go wrong, please contact us! When you're ready to begin, click
-                on the "start" button below.</p>
+			<p>The total time taken should be about 10 minutes. Please <u>don't</u> use the "back" button on your browser or close the window until you reach the end.  Doing this is very likely to break the experiment which means that I will loose my data and you may not get a copy of your results.  If something does go wrong, please contact me, and I will do what I can to fix it!  When you're ready to begin, click on the "start" button below.</p>
 
 		<!-- Next button for the splash page -->
                <p align="center"> <input type="button" id="splashButton" class="start jspsych-btn" value="Start!"
@@ -47,6 +40,7 @@
 
             </div>
 	</div>
+
 
 	<!-- ####################### Consent ####################### -->
 	<div class="consent" style="display:none; width:1000px">
