Directory name change
from wtf to doc, also changed file refs in main

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 			<p><b>Inquiries</b><br>If you have any questions or concerns following your participation, Ian Davies (+61 4 0006 0971, email. daviesi@student.unimelb.edu.au) will be happy to address them.<p>
 
-			<p>Please keep a copy of this information sheet (you can download the pdf <a href="./wtf/info.pdf" target="_blank">here</a>).  At least note my email address!  There is some additional information on the experiment which may interest you if you are a nerd, psychologist, or just generally curious <a href="./wtf/tech.pdf" target="_blank">here</a>!</p>
+			<p>Please keep a copy of this information sheet (you can download the pdf <a href="./doc/info.pdf" target="_blank">here</a>).  At least note my email address!  There is some additional information on the experiment which may interest you if you are a nerd, psychologist, or just generally curious <a href="./doc/tech.pdf" target="_blank">here</a>!</p>
 
 			<br>
 			<p align="center"><b>PARTICIPANT CONSENT</b></p>
@@ -153,7 +153,7 @@
 	  	<label for="experience"><b>Experience level: &nbsp;</b></label>
 	  	<input type="radio" name="experience" value="never" /> I have never entered a Sprint event&nbsp;
 	  	<input type="radio" name="experience" value="some" /> I have orienteered a bit before &nbsp;<br />
-		<input type="radio" name="experience" value="often" /> I orienteer often&nbsp;<br />
+		<input type="radio" name="experience" value="often" /> I orienteer often&nbsp;
 	  	<input type="radio" name="experience" value="elite" /> I run M20E, M21E, W20E, or W21E&nbsp;
 		<input type="radio" name="experience" value="past-elite" /> I used to run Elete<br /><br />
 
